--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,9 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+hotel_stats:
+  path: /hotel/{id}/reviews-stats
+  # the controller value has the format 'controller_class::method_name'
+  controller: App\Controller\HotelController::stats
+  methods:    GET
